--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body style="background-color:#000000c0">
     <div id="navSidepanel" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
-      <a href="main.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="projects.html">My Projects</a>
       <a href="future.html">My Plans</a>
