fixed bug in contact.html

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <div class="container">
       <form action="contact.php" target="_top">
       <label for="uname">Username</label>
-      <input type="text" id="uname" name="username" placeholder="JohnDoe1234" required">
+      <input type="text" id="uname" name="username" placeholder="JohnDoe1234" required>
       <label for="nicname">Nickname</label>
       <input type="text" id="nicname" name="nickname" placeholder="Optional">
       <label for="favecolor">Favorite color</label>
