Update personal information in main_up.html
Signed-off-by: TheLabKing <122424475+TheLabKing@users.noreply.github.com>

--- a/main_up.html
+++ b/main_up.html
@@ -40,17 +40,17 @@
     <img class="center" style="width:50%" src=Images/cello_standing.jpg>
     <br>
     <p class="center" style="width:70%">
-      Hello, world! My name is Joseph Sokolowski. I am a Freshman at the Rochester Institute of Technology majoring in Cybersecurity and minoring in System Administration and Networking.
+      Hello, world! My name is Joseph Sokolowski. I am a Sophomore at the Rochester Institute of Technology, majoring in Cybersecurity and minoring in System Administration and Networking.
     </p>
       <h2 class="center" style="width: 30%">
         College
       </h2>
       <img src="Images/RIT_logo.jpg" class="center" style="width:18%;">
       <p style="width:70%" class="center">
-        I attend the Rochester Institute of Technology (RIT) in Rochester, NY, class of 2028.
-        I am currently in the Cybersecurity program and taking a few classes in the Software Engineering program.
-        I plan to minor in IT and start classes in that program in the Fall semester of 2025.
-        I am also a performing arts scholar and part of the RIT Philharmonic Orchestra. 
+        I study at the Rochester Institute of Technology (RIT) in Rochester, NY, class of 2028.
+        I am currently in the Cybersecurity program and taking a few classes in the Networking program.
+        I plan to minor in AI and System Administration or Networking, and have started classes in those programs in the Fall semester of 2025.
+        I am also a performing arts scholar performing in the RIT Philharmonic Orchestra. 
       </p>
     <!--clock-->
     <div style="color:#fffffff8" class="center" id="d1"></div>
